--- a/ConsoleClient/ConsoleClient.csproj
+++ b/ConsoleClient/ConsoleClient.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MyBinaryTree\MyBinaryTree.csproj" />
+  </ItemGroup>
+
 </Project>
